# UChi-Trading-2025

./: .gitignore  LICENSE  README.md  gui.py  pyproject.toml  setup.py
Final/: Final_Bot copy.py  UTC trading strat overview.docx
case1/: Bot_1.py  Final_Bot.py  Final_position.py  MainBot.py  SlidingWindow.py  gui.py  params.py
case1_final/: SlidingWindow.py  trading_config.json  trial.py
case1_final/log/: trading_log_20250411_211226.txt  trading_log_20250411_211623.txt
case2/: FinalBot.py  MainBot.py  baseline_pairs_trading.ipynb  stub.py
case2/Attempt/: IPCA_V2.py  Markowitz.py  linear.py  validate_allocator.py
case2/Past_Algo_Attempt/: 3_basic.py  IPCA.py  IPCA_V2.py  Xgboostwithpair.py  backup.py  mix_1.py  optimize_thresholds.py  pair.py  pair_para.py  parameter_tuning.py  pase_2  pasee3.py  past1.py
case2/Relation/: correlation.py  investiage.ipynb  investment_oppo.py  simple.py
case2/Submitted/: NoXgboostwithpair.py  UChicago10-NoXgboostwithpair.py
utcxchangelib/: service_pb2.py
utcxchangelib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
utcxchangelib/examples/: cancel_time_bot.py  example_bot.py
